--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^1.0.1",
     "body-parser": "^1.15.2",
+    "connect-mongo": "^1.3.2",
     "connect-pg-simple": "^3.1.2",
     "ejs": "^2.5.5",
     "ejs-mate": "^2.3.0",
